[project]
name = "katolab-graph-visualize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[project.scripts]
analyze = "spectra_analysis:main"
plot    = "spectra_plot:main"
analyze-single = "spectra_analysis_single:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["spectra_analysis", "spectra_analysis_single", "spectra_peak_fit", "spectra_plot", "spectra_common"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
