[project]
name = "katolab-graph-visualize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.5.3",
    "jupyterlab>=4.5.6",
    "lmfit>=1.3.4",
    "matplotlib>=3.9.4",
    "matplotlib-scalebar>=0.9.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[project.scripts]
analyze = "spectra_analysis:main"
plot    = "spectra_plot:main"
analyze-single = "spectra_analysis_single:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["spectra_analysis", "spectra_analysis_single", "spectra_peak_fit", "spectra_plot", "spectra_common"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
